# native-turbo

./: .clang-format  .gitignore  Makefile  README-build.md  README.en.md  README.md  devops-env.sh  meson.build  meson_options.txt
doc/: ELF-hugepage-mode2.md  ELF-hugepage.md  Native-Turbo.drawio  Native-Turbo.pptx  README-build.md  dfe.md
glibc-patch/SP1/: 0001-elf-dynamic-linker-load-shared-object-use-hugepage-a.patch  0002-elf-ld.so-use-special-mmap-for-hugepage-to-get-symbo.patch  0031-elf-relocate-text-and-data.patch
glibc-patch/glibc-2.17/: 0003-elf-load-elf-files-with-hugepages.patch
glibc-patch/glibc-2.28/: 0002-elf-ld.so-add-testcase-for-ld.so-load-shared-object-.patch
kernel-patch/: 0001-add-CONFIG-and-vm_real_file.patch  0003-add-support-for-hugepages-in-load_elf_binary.patch
kernel-patch/kernel-4.18/: 0002-add-fallback-support-for-exec_hugepages.patch
kernel-patch/kernel-5.10/: huawei-irq-merge-high-precision-timer-to-reduce-interrupts.patch
lib/: meson.build
lib/array/: dfe_array.c  dfe_array.h  meson.build  si_array.c  si_array.h
lib/hashmap/: dfe_hashmap.c  dfe_hashmap.h  meson.build  si_hashmap.c  si_hashmap.h
lib/ring/: dfe_ring.c  dfe_ring.h  dfe_ring_core.h  meson.build  si_ring.c  si_ring.h  si_ring_core.h
lib/sys/: meson.build  si_common.c  si_debug.c  si_log.c
lib/sys/include/: dfe_common.h  dfe_test.h  si_common.h  si_debug.h  si_log.h  si_test.h
objreloc/: objreloc.sh
old/glibc-patch/glibc-2.17/: 0001-Factor-mmap-munmap-of-PT_LOAD-segments-out-of-_dl_ma.patch  0002-Check-for-__mprotect-failure-in-_dl_map_segments-BZ-.patch
old/glibc-patch/glibc-2.28/: 0003-elf-ld.so-use-special-mmap-for-hugepage-to-get-symbo.patch
old/kernel-patch/kernel-4.18/: 0004-support-vm_mmap_hugepages-in-ksys_mmap_pgoff.patch  0021-irq-merge-high-precision-timer-to-reduce-interrupts.patch
old/test_rela/: .gitignore  relocation.c
sysboost/: .gitignore  Cargo.toml  Makefile  devops-env.sh  meson.build  rustfmt.toml  sysboost.service
sysboost/.cargo/: config.toml
sysboost/libs/basic/src/: condition.rs
sysboost/src/: .gitignore  elf_check_elf.c  elf_check_elf.h  elf_daemon.c  elf_daemon.h  elf_hugepage.c  elf_hugepage.h  elf_link_common.c  elf_link_common.h  elf_link_elf.c  elf_link_elf.h  elf_read_elf.c  elf_read_elf.h  elf_read_elf_xz.c  elf_relocation.c  elf_relocation.h  elf_relocation_aarch64.c  elf_relocation_x86_64.c  elf_write_elf.c  elf_write_elf.h  link_elf.c  link_elf.h  main.c  meson.build
sysboost/src/binfmt_rto/: Makefile  binfmt_rto.c
sysboost/src/libhook/: .gitignore  dlsym_hook.c  meson.build
sysboost/src/objreloc/: objreloc.sh
sysboost/src/static_template/: .gitignore  meson.build  static_template.c
sysboost/test/: .gitignore  meson.build
sysboost/test/UDG/: .gitignore
sysboost/test/bash/: .gitignore  Makefile  test_bash.sh
sysboost/test/test_app/: Makefile  common_func.c  meson.build  test_app.c  util1.c  util2.c
sysboost/test/test_config/: Makefile  bash.toml
sysboost/test/test_ifunc/: Makefile  meson.build
sysboost/test/test_simple/: Makefile  meson.build  simple_app.c
sysboost/test/test_sysboost/: test_sysboostd.rs
sysboost/tests/: test_sysboostd.rs
sysboost/tests/UDG/: meson.build
sysboost/tests/bash/: Makefile
sysboost/tests/test_app/: Makefile  test_app.c  util1.c
sysboost/tests/test_config/: app1.toml  app2.toml  bash.toml
sysboost/tests/test_ifunc/: test_ifunc.c
sysboost/tests/test_simple/: Makefile  meson.build
tests/: meson.build
tests/test_array/: main.c  meson.build
tests/test_hashmap/: main.c  meson.build
tests/test_rela/: Makefile  a.c  b.c  relocation.c
